# emacs-webrender

./: .envrc  .gitignore  Cargo.toml  README.org  configure.ac  flake.nix  guix.scm  manifest.scm
.cargo/: config.toml
.github/workflows/: _build.yml  _prepare.yml  _release.yml  build.yml  checks.yaml  emacsng-webrender.yml  macos-dmg.yml  nightly-emacs-29-wr.yml  repo-sync.yml
build-aux/: wr_head_rev.py
lisp/: cus-edit.el  faces.el  frame.el  loadup.el  menu-bar.el  mwheel.el  select.el  simple.el  startup.el
lisp/emacs-lisp/: icons.el
lisp/international/: mule-cmds.el
lisp/net/: browse-url.el  eww.el
lisp/term/: wr-win.el
lisp/url/: url-privacy.el
nix/: commands.toml  librusty_v8.nix  rust.nix  sources.toml
nix/_sources/: generated.json  generated.nix
src/: Makefile.in  dispextern.h  dispnew.c  emacs.c  eval.c  frame.c  frame.h  ftfont.h  image.c  process.c  termhooks.h  terminal.c  wrfns.c  wrgui.h  wrterm.c  wrterm.h  xfaces.c
src/lisp_macros/: Cargo.toml  lib.rs
src/lisp_types/: Cargo.toml  build.rs.in  wrapper.h
src/lisp_types/src/: lib.rs
src/lisp_util/: Cargo.toml  attributes.rs
src/wr/: Cargo.toml  Cargo.toml.bak  Cargo.toml.in  build.rs  cbindgen.toml
src/wr/src/: color.rs  cursor.rs  display_info.rs  draw_canvas.rs  event.rs  event_loop.rs  font.rs  font_db.rs  frame.rs  fringe.rs  image.rs  input.rs  lib.rs  output.rs  term.rs  texture.rs  util.rs  wrterm.rs
src/wr/src/select/: README  future.rs  thread.rs
