[workspace]

members = [
  "src/lisp_types",
  "src/lisp_macros",
  "src/lisp_util",
  "etc/colors",
  "src/wr",
]

resolver = "2"

[profile.dev]
opt-level = 1
rpath = false
lto = false
debug-assertions = true
panic = "abort"

[profile.release]
opt-level = 2
rpath = false
debug-assertions = false
panic = "abort"

[profile.dev.build-override]
opt-level = 1

[profile.release.build-override]
opt-level = 1

# tmp ignore macOS alternative key characters.
[patch.crates-io]
winit = { git = "https://github.com/declantsien/winit", rev="d80de2ea150a36d078bd19b6c6ce1cc299304fc5" }

[patch.crates-io.fontdb]
git = "https://github.com/declantsien/fontdb.git"
rev="7add541d71b8dd9432c8ac6b2616e27da9134d7c"
