[package]
name = "lisp-macros"
version = "0.1.0"
description = "Procedural macro used to generate definitions for lisp native functions."
edition = "2021"

[lib]
path = "lib.rs"
proc-macro = true

[dependencies]
quote = "0.6"
syn = { version = "0.15.26", features = ["full"] }
lisp-util = { path = "../lisp_util" }
lisp-types = { path = "../lisp_types" }
regex = "0.2"
lazy_static = "1.0"
proc-macro2 = "0.4"
