[package]
name = "wrterm"
version = "0.1.0"
build = "build.rs"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
lisp-types = { path = "../lisp_types", features = ["window-system-webrender"] }
lisp-macros = { path = "../lisp_macros" }
lisp-util = {  path = "../lisp_util" }
colors = {  path = "../../etc/colors" }
libc = "0.2.95"
lazy_static = "1.2"
webrender = { git = "https://github.com/servo/webrender.git", rev = "524a27cbec3399fe2ae6173960faf74939dcd350" }
# webrender = { git = "https://github.com/servo/webrender.git", rev = "ecbe93f7df289db2823c3c1fb748af5f3e4827ea" }
font-kit = "0.10.0"
glutin = "0.26"
gleam = "0.13"
copypasta = "0.7.1"
image = "0.23.14"
app_units = "0.7.1"
bit-vec = "0.6.3"
# fontdb = "0.9.2"
ttf-parser = "0.12.3"
once_cell = "1.8.0"
tokio = { version = "1.10.0", features = ["rt-multi-thread", "sync", "net", "macros", "time"] }
futures = "0.3.16"

[dependencies.fontdb]
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features
path = "/shared/src/fontdb"
features = ["fs", "memmap", "fontconfig"]


[build-dependencies]
cargo_toml = "0.13.0"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.2"

[features]
default = ["wayland", "x11"]
x11 = ["copypasta/x11", "glutin/x11"]
wayland = ["copypasta/wayland", "glutin/wayland"]
capture=["webrender/capture", "webrender/serialize_program", "webrender/sw_compositor"]
