[package]
name = "wrterm"
version = "0.1.0"
build = "build.rs"
edition = "2021"
resolver = "2"

[lib]
crate-type = ["staticlib"]
path = "src/lib.rs"

[dependencies]
lisp-types = { path = "../lisp_types", features = ["window-system-webrender"] }
lisp-macros = { path = "../lisp_macros" }
lisp-util = {  path = "../lisp_util" }
colors = {  path = "../../etc/colors" }
env_logger = "0.9.3"
log = "0.4.17"
libc = "0.2.95"
lazy_static = "1.4"
webrender = { git = "https://github.com/servo/webrender.git", rev = "da3fba3c4751c0bf4098309ecb4329110b062146" }
webrender_api = { git = "https://github.com/servo/webrender.git", rev = "da3fba3c4751c0bf4098309ecb4329110b062146" }
font-kit = "0.10.0"
gleam = "0.13"
copypasta = "0.8.1"
image = "0.23.14"
app_units = "0.7"
bit-vec = "0.6.3"
ttf-parser = "0.12.3"
once_cell = "1.16.0"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "sync", "net", "macros", "time"] }
futures = "0.3.25"
winit = "0.27.5"

[dependencies.webrender_surfman]
git = "https://github.com/declantsien/webrender_surfman.git"
rev = "6d5c67923d85f12d3bf0f5e4fbee159772d49572"
# path = "/home/declan/src/webrender_surfman"

[dependencies.surfman]
git = "https://github.com/declantsien/surfman.git"
rev = "682fc7f787432de7b289e4caf4d8e248f85268c9"
# path = "/home/declan/src/surfman/surfman"

[dependencies.fontdb]
version = "0.10.0"
default-features = false # do not include the default features, and optionally
                         # cherry-pick individual features

# path = "/shared/src/fontdb"
features = ["fs", "memmap", "fontconfig"]


[build-dependencies]
cargo_toml = "0.13.0"
cbindgen = "0.24.3"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.2"

[features]
default = ["wayland", "x11"]
x11 = ["copypasta/x11"]
wayland = ["copypasta/wayland"]
capture=["webrender/capture", "webrender/serialize_program", "webrender/sw_compositor"]
